--- a/index.scss
+++ b/index.scss
@@ -28,6 +28,11 @@ header {
   display: flex;
   align-items: center;
   padding-block: 10px;
+
+  nav {
+    display: flex;
+    gap: 20px;
+  }
 }
 
 header .site-logo {
@@ -42,7 +47,7 @@ header a {
   text-decoration: none;
   color: #4d4d4d;
   font-weight: 600;
-  padding: 5px 20px;
+  // padding: 5px 20px;
 }
 
 header a:hover {
@@ -77,7 +82,7 @@ header a:hover {
   background-size: cover;
   min-height: 350px;
   color: white;
-  padding: 45px 23px;
+  padding: 45px 0;
 }
 
 .home-container h1 {
@@ -96,9 +101,9 @@ header a:hover {
   text-decoration: none;
   background-color: #ff8c38;
   border: none;
-  width: 100%;
-  margin-top: 27px;
-  padding-block: 0.75rem;
+  // width: fit-content;
+  margin-top: 50px;
+  padding: 0.75rem 1.5rem;
   color: white;
   font-weight: 700;
   border-radius: 5px;
